--- a/src/index.css
+++ b/src/index.css
@@ -118,10 +118,12 @@ nav {
 }
 
 .product-card {
+  background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 1rem;
   text-align: left;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .product-card img {
@@ -170,6 +172,7 @@ nav {
   border: 1px solid #ddd;
   border-radius: 8px;
   background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .product-details-header {
@@ -250,6 +253,16 @@ nav {
  
 }
 
+.product-actions {
+  margin-top: 1rem;
+  display: flex;
+  justify-content:left;
+  align-items: left;
+  gap: 1rem;
+
+ 
+}
+
 .add-to-cart {
   background-color: #4CAF50;
   color: white;
@@ -262,6 +275,21 @@ nav {
 .add-to-cart:hover {
   background-color: #45a049;
 }
+
+.view-details{
+  background-color: #3498db;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  text-decoration: none; /* Removes underline */
+}
+.view-details:hover {
+  background-color: #2980b9;
+}
+
+
 .back-to-shop {
   background-color: #3498db;
   color: white;
